log/build_2025-06-18_13-53-58/my_cpp_package/stdout.log
[1/2] Building CXX object CMakeFiles/my_node.dir/src/my_node.cpp.o
FAILED: CMakeFiles/my_node.dir/src/my_node.cpp.o 
/Users/swin/code/ros2/ros2_humble/.pixi/envs/default/bin/arm64-apple-darwin20.0.0-clang++ -DDEFAULT_RMW_IMPLEMENTATION=rmw_cyclonedds_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rclcpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/cv_bridge -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/image_transport -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/sensor_msgs -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/python3.11 -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/lib/python3.11/site-packages/numpy/core/include -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/opencv4 -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/ament_index_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/libstatistics_collector -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/builtin_interfaces -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_runtime_c -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcutils -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_interface -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_runtime_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_fastrtps_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rmw -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_fastrtps_c -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_introspection_c -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_introspection_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcl -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcl_interfaces -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcl_logging_interface -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcl_yaml_param_parser -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/tracetools -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcpputils -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/statistics_msgs -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosgraph_msgs -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_c -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/geometry_msgs -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/std_msgs -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/message_filters -ftree-vectorize -fPIC -fstack-protector-strong -O2 -pipe -stdlib=libc++ -fvisibility-inlines-hidden -fmessage-length=0 -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include -arch arm64 -isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk -MD -MT CMakeFiles/my_node.dir/src/my_node.cpp.o -MF CMakeFiles/my_node.dir/src/my_node.cpp.o.d -o CMakeFiles/my_node.dir/src/my_node.cpp.o -c /Users/swin/code/ros2/ros2_humble/src/my_cpp_package/src/my_node.cpp
/Users/swin/code/ros2/ros2_humble/src/my_cpp_package/src/my_node.cpp:45:32: error: expected ';' at end of declaration
   45 |       float c_y = 720.0f / 2.0f
      |                                ^
      |                                ;
1 error generated.
ninja: build stopped: subcommand failed.
